# ynab-cli

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
crates/ynab-cli/: Cargo.toml
crates/ynab-cli/src/: main.rs
crates/ynab-cli/tests/: cli.rs
crates/ynab-core/: Cargo.toml
crates/ynab-core/src/: app.rs  config.rs  error.rs  lib.rs  models.rs  secrets.rs
crates/ynab-mcp/: Cargo.toml
crates/ynab-mcp/src/: main.rs  server.rs  tools.rs  types.rs
crates/ynab-mcp/tests/: mcp_smoke.rs
scripts/: pre-push-check.sh
skills/ynab-cli/: SKILL.md
skills/ynab-cli/agents/: openai.yaml
