[workspace]
members = [
  "crates/ynab-core",
  "crates/ynab-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
keyring = "3.6"
predicates = "3.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.12"
thiserror = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
url = { version = "2.5", features = ["serde"] }
webbrowser = "1.0"

