[package]
name = "ynab-mcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "ynab-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ynab-core = { path = "../ynab-core" }

[dev-dependencies]
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
tempfile.workspace = true
